# captain-qr

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml  test.yml
docs/: README.md  batch-processing.md  commands.md  examples.md  output-formats.md
man/: cqr.1
scripts/: build.sh  install.sh  test.sh
snap/: snapcraft.yaml
src/: batch.rs  cli.rs  decoder.rs  error.rs  generators.rs  lib.rs  main.rs  renderer.rs  utils.rs  wizard.rs
tests/: decoder_test.rs  generators_test.rs  renderer_test.rs
