[package]
name = "cqr"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A CLI tool to generate QR codes for WiFi, URLs, text, and more"
license = "MIT"
repository = "https://github.com/yourusername/cqr"
homepage = "https://github.com/yourusername/cqr"
readme = "README.md"
keywords = ["qr", "qrcode", "cli", "wifi", "generator"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "cqr"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
qrcode = "0.14"
image = "0.24"
colored = "2.0"
thiserror = "1.0"
base64 = "0.21"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chrono = "0.4"
rxing = "0.6"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.5.7"
